[gd_scene load_steps=17 format=2]

[ext_resource path="res://Script/letras/PressStart2P.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://pomodoro/pomodoro1.png" type="Texture" id=3]
[ext_resource path="res://pop ups/pomodoro/X.png" type="Texture" id=4]
[ext_resource path="res://pomodoro/pixil-frame-0 (3).png" type="Texture" id=5]
[ext_resource path="res://pomodoro/pixil-frame-0 (2).png" type="Texture" id=6]
[ext_resource path="res://Script/popUpPomodoro1.gd" type="Script" id=7]
[ext_resource path="res://pop ups/relógio/quizz.png" type="Texture" id=8]
[ext_resource path="res://pomodoro/grafico_pomodoro.png" type="Texture" id=9]
[ext_resource path="res://pop ups/relógio/x escuro.png" type="Texture" id=11]

[sub_resource type="StyleBoxTexture" id=8]

[sub_resource type="Theme" id=4]

[sub_resource type="DynamicFont" id=5]
size = 30
use_filter = true
extra_spacing_top = 3
extra_spacing_bottom = 2
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=6]

[sub_resource type="DynamicFont" id=7]
size = 30
use_filter = true
extra_spacing_top = 3
extra_spacing_bottom = 2
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 30
use_filter = true
extra_spacing_top = 3
extra_spacing_bottom = 2
font_data = ExtResource( 1 )

[node name="Pagina1" type="Node2D"]
script = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -3191.0
margin_top = -368.0
margin_right = -436.0
margin_bottom = 1078.0
color = Color( 0, 0, 0, 0.854902 )

[node name="WindowDialog" type="WindowDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2235.0
margin_top = 82.0
margin_right = -1551.0
margin_bottom = 535.0
rect_scale = Vector2( 1.16602, 1.16602 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/close_h_ofs = -20
custom_constants/scaleborder_size = 0
custom_constants/close_v_ofs = 50
custom_icons/close_highlight = ExtResource( 4 )
custom_icons/close = ExtResource( 11 )
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite3" type="Sprite" parent="WindowDialog"]
position = Vector2( 622.631, 421.091 )
scale = Vector2( 0.255775, 0.244565 )
texture = ExtResource( 8 )
offset = Vector2( -1095.23, -786.997 )

[node name="Label3" type="Label" parent="WindowDialog/Sprite3"]
margin_left = -2172.76
margin_top = -1290.47
margin_right = -792.759
margin_bottom = -1141.47
rect_scale = Vector2( 1.59766, 2.36107 )
theme = SubResource( 4 )
custom_colors/font_color = Color( 1, 0.27451, 0.219608, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Agora que você conhece o método Pomodoro, 
use os tomates para destruir os inimigos que 
aparecerem em sua frente (e os ciclos do
pomodoro para livrar suas tarefas pendentes! )"
align = 1
valign = 1

[node name="Label4" type="Label" parent="WindowDialog/Sprite3"]
margin_left = -1695.91
margin_top = -568.321
margin_right = -495.906
margin_bottom = -457.321
rect_scale = Vector2( 1.4038, 2.07458 )
focus_mode = 1
theme = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Utilize o botão Z para atirar os tomates"
align = 1
valign = 1

[node name="Pomodoro2" type="Sprite" parent="WindowDialog/Sprite3"]
position = Vector2( -1951.74, -464.899 )
scale = Vector2( 0.550808, 0.550808 )
texture = ExtResource( 3 )

[node name="voltar2" type="TextureButton" parent="WindowDialog/Sprite3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -3569.76
margin_top = -1281.44
margin_right = -3518.76
margin_bottom = -1230.44
rect_scale = Vector2( 4.53505, 4.53505 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
flip_h = true

[node name="Sprite2" type="Sprite" parent="WindowDialog"]
position = Vector2( 342.499, 228.618 )
scale = Vector2( 0.255775, 0.244565 )
texture = ExtResource( 8 )

[node name="GraficoPomodoro" type="Sprite" parent="WindowDialog/Sprite2"]
position = Vector2( -38.0925, -93.1859 )
scale = Vector2( 2.92367, 3.05768 )
texture = ExtResource( 9 )

[node name="avancar2" type="TextureButton" parent="WindowDialog/Sprite2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -389.952
margin_top = -493.582
margin_right = -338.952
margin_bottom = -442.582
rect_scale = Vector2( 4.53505, 4.53505 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )

[node name="voltar1" type="TextureButton" parent="WindowDialog/Sprite2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2474.53
margin_top = -494.445
margin_right = -2423.53
margin_bottom = -443.445
rect_scale = Vector2( 4.53505, 4.53505 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
flip_h = true

[node name="Sprite" type="Sprite" parent="WindowDialog"]
modulate = Color( 1, 1, 1, 0.988235 )
position = Vector2( 341.641, 225.188 )
scale = Vector2( 0.255135, 0.247016 )
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="WindowDialog/Sprite"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2474.0
margin_top = -932.0
margin_right = -1394.0
margin_bottom = -707.0
rect_scale = Vector2( 2.10588, 2.10588 )
theme = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "O método Pomodoro, cujo nome 
vem da palavra italiana para tomate,
 busca um melhor aproveitamento 
do seu tempo, dividindo o fluxo de 
trabalho em intervalos e aumentando 
o foco entre blocos."
align = 1
valign = 1

[node name="Pomodoro1" type="Sprite" parent="WindowDialog/Sprite"]
position = Vector2( -36.0529, -377.632 )
scale = Vector2( 0.948532, 0.948532 )
texture = ExtResource( 3 )

[node name="avancar" type="TextureButton" parent="WindowDialog/Sprite"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -384.208
margin_top = -485.214
margin_right = -333.208
margin_bottom = -434.214
rect_scale = Vector2( 4.53505, 4.53505 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )

[connection signal="popup_hide" from="WindowDialog" to="." method="_on_WindowDialog_popup_hide"]
[connection signal="pressed" from="WindowDialog/Sprite3/voltar2" to="." method="_on_voltar2_pressed"]
[connection signal="pressed" from="WindowDialog/Sprite2/avancar2" to="." method="_on_avancar2_pressed"]
[connection signal="pressed" from="WindowDialog/Sprite2/voltar1" to="." method="_on_voltar1_pressed"]
[connection signal="pressed" from="WindowDialog/Sprite/avancar" to="." method="_on_avancar_pressed"]
